Создание Мероприятий и Загадок
1. Реализовано создание мероприятий для организаторов
2. Создано временное решение для загадок
3. Исправление приглашений в группу

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,11 @@
     <string name="error_team_registration">Ошибка регистрации команды на мероприятие</string>
     <string name="error_load_event">Ошибка загрузки мероприятия</string>
     <string name="need_login">Необходимо войти в систему</string>
+
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_profile_settings">Настройки профиля</string>
+    <string name="title_activity_leaderboard">Таблица лидеров</string>
+    <string name="title_activity_group">Группа</string>
+    <string name="title_activity_create_group">Создание группы</string>
+    <string name="title_activity_riddle">Загадки</string>
 </resources>
